k8s/overlays/dev/infra/kafka/kafka-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-exporter
  namespace: infra
  labels:
    app: kafka-exporter
spec:
  selector:
    app: kafka-exporter
  ports:
    - name: metrics
      port: 9308
      targetPort: 9308
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-exporter
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-exporter
  template:
    metadata:
      labels:
        app: kafka-exporter
    spec:
      containers:
        - name: kafka-exporter
          image: danielqsj/kafka-exporter:latest
          args:
            - "--kafka.server=kafka-headless.infra.svc.cluster.local:9092"
          ports:
            - name: metrics
              containerPort: 9308
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 150m
              memory: 256Mi
