k8s/overlays/dev/infra/kafka/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: infra
  labels:
    app: kafka
spec:
  clusterIP: None # Headless service로 설정하여 StatefulSet과 함께 사용
  selector:
    app: kafka
  ports:
    - name: external
      port: 9092
      targetPort: 9092
    - name: internal
      port: 29092
      targetPort: 29092
    - name: metrics
      port: 7071
      targetPort: 7071
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: infra
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  serviceName: "kafka-headless"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      # 에이전트 JAR 파일을 공유하기 위한 임시 볼륨 및 설정 마운트
      volumes:
        - name: jmx-exporter-jar
          emptyDir: {}
        - name: metrics-config-vol
          configMap:
            name: kafka-metrics-config

      # Init Container: JMX Exporter JAR 파일을 준비
      enableServiceLinks: false
      containers:
        - name: kafka
          image: apache/kafka:4.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
            - containerPort: 29092
            - name: metrics
              containerPort: 7071
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          # kafka 연결 상태 확인
          readinessProbe:
            tcpSocket:
              port: 29092
            initialDelaySeconds: 60
            periodSeconds: 10

          volumeMounts:
            - name: kafka-storage
              mountPath: /var/lib/kafka/data
            - name: jmx-exporter-jar
              mountPath: /usr/share/java/jmx_prometheus_javaagent.jar
              subPath: jmx_prometheus_javaagent.jar
            - name: metrics-config-vol
              mountPath: /etc/kafka-monitoring/kafka-metrics-config.yaml
              subPath: kafka-metrics-config.yaml

  volumeClaimTemplates:
    - metadata:
        name: kafka-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
